Fixed map / list toolbar alignment

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -507,6 +507,7 @@ hr { border: 1px solid $grayBorder; width: 60%; margin-top: 1.2rem; margin-botto
     display: flex;
     flex-wrap: wrap;
     vertical-align: top;
+    margin-bottom: 100px;
 }
 .stop-list-child {
     display: inline-block; 
